--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.13",
+    "ip-to-int": "^0.3.1",
     "vue": "^3.2.36",
     "vue-router": "^4.1.6"
   },
